app/assets/stylesheets/application.css.scss
$header_height: 50px;       // top header
$reverse:               #fff;

@import 'bootstrap';
@import "flatify/flatify";
@import "pages/*";
@import "angular/angular-csp";
@import 'tablesorter';

body {
  background-color: #eee;
}

.action-buttons {
  float: right;
  a {
    margin-left: 10px;
  }
}

.statistic {
  float: left;
  margin-right: 15px;
  margin-bottom: 15px;
  width: 220px;
  border: 1px #DDDDDD solid;
}

.table-key-values {
  caption {
    text-align: left;
  }
  th {
    float: none;
    width: 124px;
    margin-left: 0;
  }
}

/*=============== collapsible blocks */
*[data-collapsible] {
  cursor: pointer;
  &:after {
    content: '►';
  }
  &:hover {
    background-color: #eee;
  }
  &.active {
    &:after {
      content: '▼';
    }
  }
}

.form-filter {
  div {
    display: inline-block;
  }
}

.table {
  .name {
    max-width: 150px;
    overflow: hidden;
  }
  .date {
    white-space: nowrap;
    width: 85px;
  }
  .notes {
    max-width: 200px;
  }
  .qty {
    text-align: right;
  }
  .center {
    text-align: center;
  }
  .owes {
    background-color: #ffb2b2;
  }
  .amount {
    white-space: nowrap;
  }
}

.table-toggler {
  td.green {
    background-color: green;
  }
  td.red {
    background-color: red;
  }
  td {
    border-bottom: 1px solid #eaeaea;
  }
  form {
    margin: 0;
  }
}

.dot {
  display: inline-block;
  width: 10px;
  height: 10px;
}

.dot-green {
  background-color: green;
}

.dot-red {
  background-color: red;
}

// awesome_print output
.ap {
  border: 1px solid red;
  pre {
    background-color: inherit;
    font-size: 10px;
    border: none;
    display: inline;
  }
}

.map_container {
  // tiwtter bootstrap fix see
  // https://github.com/apneadiving/Google-Maps-for-Rails/wiki/Google-Maps-and-Twitter-Bootstrap
  img {
    max-width: none;
  }
  width: inherit;
}

.gmaps4rails_map {
  width: inherit;
}

// similar angel pages

.similar-angel {
//  @include clearfix();

  .angel {
    float: left;
    padding: 20px;
  }
}

.team-delta {
  margin-top: 26px;
  margin-bottom: 26px;
  span {
    color: white;
    font-size: 30px;
    padding: 10px;
  }
}

.team-member {
  .role {
    font-weight: bold;
  }
  .notes {
    font-style: italic;
  }
  .status {
    color: #0f8a26;
  }
  .highest-level {
    color: red;
  }
}

caption {
  font-size: larger;
  font-weight: bold;
}

.subnav {
  li {
    padding-left: 40px;
  }
}

.phone {
  white-space: nowrap;
}

.navbar-header {
  width: 100%;
}

.navbar-nav {
  // Uncollapse the nav always
  float: left;
  margin: 0;

  > li {
    float: left;
    > a {
      padding-top:    $navbar-padding-vertical;
      padding-bottom: $navbar-padding-vertical;
    }
  }

  &.navbar-right:last-child {
    margin-right: -$navbar-padding-horizontal;
  }
}

// avoid Pending and Wait Listed moving down a row
@media (max-width: $screen-xs-max) {
  .navbar-brand { padding-right: 0; }
  .nav > li > a { padding-right: 0; padding-left: 10px; }
  .navbar-header { font-size: 80%; }
}


.devise {
  width: 300px;
}

.messages {
  .header, .footer {
      background-color: #FFD;
      border: 1px solid #E4E4E4;
      padding-left: 10px;
      padding-right: 10px;
      margin-bottom: 5px;
  }
}

